tests/paczka1/small_fuzzy/77667660.err
Error in line 4: S298 S593 89,4
Error in line 6: S298 S240 97,8
